add getinvoice endpoint
